<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/titleLabelTextView"
        
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/label_title" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_column="1"
        android:layout_row="0"
         />

    
    <TextView
        android:id="@+id/yearLabelTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/label_year"
        />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_column="1"
        android:layout_row="1"
        />

    <TextView
        android:id="@+id/directorLabelTextView"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/label_director"
         />

    <TextView
        android:id="@+id/directorTextView"
        android:layout_column="1"
        android:layout_row="2"
        />
    
    <TextView
        android:id="@+id/ratingLabelTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/label_rating"
         />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_column="1"
        android:layout_row="3"
       />
    
    <TextView
        android:id="@+id/lengthLabelTextView"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/label_length"
     />

    <TextView
        android:id="@+id/lengthTextView"
        android:layout_column="1"
        android:layout_row="4"
       />

    <TextView
        android:id="@+id/typeLabelTextView"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/label_type"
         />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_column="1"
        android:layout_row="5"
      />
    
    <TextView
        android:id="@+id/soundeffectsLabelTextView"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/label_soundeffects"
         />

    <TextView
        android:id="@+id/soundeffectsTextView"
        android:layout_column="1"
        android:layout_row="6"
         />

</GridLayout>

</ScrollView>
